@@ -6,6 +6,7 @@ What's New for OpenJPEG
 + : added
 
 January 25, 2006
++ added "OPJ_EXPORT" in openjpeg.h to generate shared lib with win32
 ! removed all CtrlM from files (openjpeg.h,t2.c,j2k_to_image.c)
 
 January 24, 2006
